# c_count-snapshots

./: CHANGES  COPYING  MANIFEST  README  aclocal.m4  c_count.1  c_count.c  c_count.lsm  configure  configure.in  descrip.mms  makefile.in  patchlev.h  system.h
package/: c_count.nsi  c_count.spec
package/debian/: changelog  copyright  rules
porting/: README  turboc.mak  vmsbuild.com  wildcard.c
testing/: Makefile  README  cat.ref  descrip.mms  list.ref  normal.ref  quotes.ref  run_test.dcl  run_test.sh  table_p.ref  test2.c
