dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 7.2 1995/05/14 20:27:18 tom Exp $
AC_REVISION($Revision: 7.2 $)
AC_INIT(c_count.c)
AC_PROG_CC
AC_PROG_INSTALL
AC_GCC_TRADITIONAL
AC_PROG_MAKE_SET

###	use option -with-warnings to turn on all gcc warnings
if test -n "$GCC"
then
AC_ARG_WITH(warnings,
[  --with-warnings         use gcc warnings (used for developing this tool)],
[CFLAGS="$CFLAGS -Wall -Wshadow -Wconversion -Wstrict-prototypes -Wmissing-prototypes"])
fi

AC_SUBST(CFLAGS)
AC_SUBST(LIBS)

AC_CONST
AC_STDC_HEADERS
AC_HAVE_HEADERS(stdlib.h getopt.h string.h malloc.h)
AC_HAVE_FUNCS(strchr getopt)

###	output makefile and config.h
changequote({,})dnl
AC_OUTPUT(makefile config_h,
{
echo creating config.h
sed	-e '/^# /d' \
	-e 's/ -D/\
#define /g' \
	-e 's/\(#define [A-Za-z_][A-Za-z0-9_]*\)=/\1	/g' \
	config_h >config.h
}
echo removing config_h
rm config_h
)
changequote([,])dnl
