dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 7.22 2025/10/01 23:46:35 tom Exp $
AC_REVISION($Revision: 7.22 $)
AC_PREREQ(2.25.20200802)
AC_INIT(c_count.c)
AC_CONFIG_HEADER(config.h:config.hin)

CF_WITH_SYSTYPE

AC_ARG_PROGRAM
AC_PROG_CC
CF_PROG_INSTALL
CF_PROG_LINT
CF_MAKE_PHONY
CF_MAKE_TAGS
AC_PROG_MAKE_SET

AC_PROG_EGREP
AC_PROG_FGREP

CF_ANSI_CC_REQD
AC_CONST

CF_WITHOUT_X

CF_ENABLE_WARNINGS
CF_DISABLE_ECHO
CF_PROG_EXT
CF_DISABLE_LEAKS
CF_WITH_MAN2HTML

AC_CHECK_DECL(exit)
AC_HAVE_HEADERS(getopt.h malloc.h)
AC_HAVE_FUNCS(strchr getopt)
CF_GETOPT_HEADER

if test $ac_cv_func_getopt = 'no'
then
	CPPFLAGS="$CPPFLAGS -I\$(srcdir)/porting"
	EXTRAOBJ=getopt\$o
	AC_SUBST(EXTRAOBJ)
fi

###	output makefile and config.h
AC_OUTPUT(makefile,,,cat)
CF_MAKE_DOCS(c_count,1)
